--- a/index.html
+++ b/index.html
@@ -304,23 +304,51 @@ if(enemyCards.length===0) return endGame('You Win!');
 setTimeout(enemyTurn,700);
 }
 
-function enemyTurn(){
-if(playerCards.length===0) return;
-const card=enemyCards[Math.floor(Math.random()*enemyCards.length)];
-const action=card.actions[Math.floor(Math.random()*card.actions.length)];
-if(action.type==='attack'){
-const target=playerCards[Math.floor(Math.random()*playerCards.length)];
-target.hp-=action.value;
-message.textContent=`Enemy ${card.name} used ${action.name} on ${target.name} for ${action.value}!`;
-playAttack();
-if(target.hp<=0) playerCards=playerCards.filter(c=>c!==target);
-} else{
-card.hp+=action.value; if(card.hp>card.maxHp) card.hp=card.maxHp;
-message.textContent=`Enemy ${card.name} used ${action.name} and healed ${action.value}!`;
-playHeal();
-}
-renderCards();
-if(playerCards.length===0) return endGame('You Lose!');
+function enemyTurn() {
+  if (playerCards.length === 0) return;
+
+  // Pick a random enemy card to act
+  const card = enemyCards[Math.floor(Math.random() * enemyCards.length)];
+
+  let action;
+  let target;
+
+  // ---- STRATEGIC DECISION ----
+  const healActions = card.actions.filter(a => a.type === 'buff');
+  const attackActions = card.actions.filter(a => a.type === 'attack');
+
+  // If HP < 40% and healing is available → heal
+  if (card.hp < card.maxHp * 0.4 && healActions.length > 0) {
+    action = healActions[Math.floor(Math.random() * healActions.length)];
+    card.hp += action.value;
+    if (card.hp > card.maxHp) card.hp = card.maxHp;
+    message.textContent = `Enemy ${card.name} used ${action.name} and healed ${action.value}!`;
+    playHeal();
+  }
+  else if (attackActions.length > 0) {
+    // Pick attack action
+    action = attackActions[Math.floor(Math.random() * attackActions.length)];
+    // Target the weakest player card (lowest HP)
+    target = playerCards.reduce((weakest, c) => c.hp < weakest.hp ? c : weakest, playerCards[0]);
+    target.hp -= action.value;
+    message.textContent = `Enemy ${card.name} used ${action.name} on ${target.name} for ${action.value}!`;
+    playAttack();
+    if (target.hp <= 0) playerCards = playerCards.filter(c => c !== target);
+  }
+  else {
+    // Fallback: random action if somehow no attack/buff logic applied
+    action = card.actions[Math.floor(Math.random() * card.actions.length)];
+    if (action.type === 'buff') {
+      card.hp += action.value;
+      if (card.hp > card.maxHp) card.hp = card.maxHp;
+      message.textContent = `Enemy ${card.name} used ${action.name} and healed ${action.value}!`;
+      playHeal();
+    }
+  }
+
+  // Re-render cards and check win/loss
+  renderCards();
+  if (playerCards.length === 0) return endGame('You Lose!');
 }
 
 // ---------------- End & Restart ----------------
@@ -369,4 +397,5 @@ document.body.addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
 
